@@ -1,3 +1,8 @@
+2008-08-28  Dan Williams  <dcbw@redhat.com>
+
+	* src/gconf-helpers/gconf-upgrade.c
+		- Consolidate code that unsets gconf keys
+
 2008-08-26  Dan Williams  <dcbw@redhat.com>
 
 	UUID updates.  Requires NM svn 4013 or later, and VPN plugins 4018 or later.
